cdL: heroku pt2

--- a/heroku.yml
+++ b/heroku.yml
@@ -1,5 +1,3 @@
 build:
   docker:
-    tradergpt: Dockerfile
-run:
-  tradergpt: python -m autogpt --ai-settings ai_settings.yaml --gpt3only --skip-news --debug --continuous
+    tradergpt: Dockerfile.heroku
