--- a/Dockerfile.heroku
+++ b/Dockerfile.heroku
@@ -18,9 +18,6 @@ ENV PIP_NO_CACHE_DIR=yes \
 ENV PATH="$PATH:/root/.local/bin"
 COPY requirements.txt .
 
-# Set the entrypoint
-ENTRYPOINT ["python", "-m", "autogpt", "--install-plugin-deps"]
-
 # release build -> include bare minimum
 FROM autogpt-base as autogpt-release
 RUN sed -i '/Items below this point will not be included in the Docker Image/,$d' requirements.txt && \
@@ -33,5 +30,6 @@ ONBUILD COPY plugins/ ./plugins
 FROM autogpt-release AS auto-gpt
 
 COPY .env.heroku .env
+COPY run_heroku.sh .
 
-ENTRYPOINT ["python", "-m", "autogpt", "--ai-settings", "ai_settings.yaml", "--gpt3only", "--skip-news", "--debug", "--continuous"]
+CMD ["./run_heroku.sh"]
