fix missing file

--- a/Dockerfile.heroku
+++ b/Dockerfile.heroku
@@ -29,7 +29,7 @@ ONBUILD COPY plugins/ ./plugins
 
 FROM autogpt-release AS auto-gpt
 
-COPY .env.heroku .env
+COPY env.heroku .env
 COPY run_heroku.sh .
 
 CMD ["./run_heroku.sh"]
