--- a/heroku.yml
+++ b/heroku.yml
@@ -1,5 +1,3 @@
 build:
   docker:
-    worker: Dockerfile.heroku
-run:
-  worker: echo "wowow" && bash ./run_heroku.sh
+    worker: heroku/Dockerfile.heroku
