--- a/Dockerfile.heroku
+++ b/Dockerfile.heroku
@@ -20,8 +20,9 @@ COPY requirements.txt .
 
 # release build -> include bare minimum
 FROM autogpt-base as autogpt-release
+RUN pip install pymilvus==2.2.8
 RUN sed -i '/Items below this point will not be included in the Docker Image/,$d' requirements.txt && \
-	pip install --no-cache-dir -r requirements.txt
+	pip install --no-cache-dir -r requirements.txt \
 WORKDIR /app
 ONBUILD COPY autogpt ./autogpt
 ONBUILD COPY scripts ./scripts
