--- a/Dockerfile.heroku
+++ b/Dockerfile.heroku
@@ -3,11 +3,13 @@ FROM python:3.10-slim AS autogpt-base
 
 # Install browsers
 RUN apt-get update && apt-get install -y \
-    chromium-driver firefox-esr \
-    ca-certificates
+    chromium-driver firefox-esr ca-certificates \
+    && apt-get clean && rm -rf /var/lib/apt/lists/*
 
 # Install utilities
-RUN apt-get install -y curl jq wget git
+RUN apt-get update && apt-get install -y \
+    curl jq wget git \
+    && apt-get clean && rm -rf /var/lib/apt/lists/*
 
 # Set environment variables
 ENV PIP_NO_CACHE_DIR=yes \
@@ -34,6 +36,6 @@ FROM autogpt-release AS auto-gpt
 
 COPY heroku/env .env
 COPY heroku/run.sh .
-COPY prompt_settings.yaml .
+COPY heroku/prompt_settings.yaml .
 
 CMD ["./run.sh"]
