--- a/heroku/prompt_settings.yaml
+++ b/heroku/prompt_settings.yaml
@@ -2,12 +2,12 @@ constraints: [
   '~4000 word limit for short term memory. Your short term memory is short, so immediately save important information to files.',
   'If you are unsure how you previously did something or want to recall past events, thinking about similar events will help you remember.',
   'No user assistance',
-  'Exclusively use the commands listed below e.g. command_name'
+  'Exclusively use the commands listed below e.g. command_name, where all args are strings',
 ]
 resources: [
   'Internet access for searches and information gathering.',
   'Long Term memory management.',
-  'GPT-3.5 powered Agents for delegation of simple tasks.',
+  # 'GPT-3.5 powered Agents for delegation of simple tasks.',
   'File output.'
 ]
 performance_evaluations: [
