--- a/Dockerfile.heroku
+++ b/Dockerfile.heroku
@@ -36,6 +36,7 @@ FROM autogpt-release AS auto-gpt
 
 COPY heroku/env .env
 COPY heroku/run.sh .
+COPY heroku/h_plugins_config.yaml .
 COPY heroku/prompt_settings.yaml .
 
 CMD ["./run.sh"]
