--- a/Dockerfile.heroku
+++ b/Dockerfile.heroku
@@ -11,6 +11,16 @@ RUN apt-get update && apt-get install -y \
     curl jq wget git \
     && apt-get clean && rm -rf /var/lib/apt/lists/*
 
+# Install TA lib
+RUN apt-get update && apt-get install -y build-essential && \
+    wget https://jaist.dl.sourceforge.net/project/ta-lib/ta-lib/0.4.0/ta-lib-0.4.0-src.tar.gz && \
+    tar -xvf ta-lib-0.4.0-src.tar.gz && \
+    cd ta-lib/ && \
+    ./configure --prefix=/usr && \
+    make && \
+    make install && \
+    apt-get clean && rm -rf /var/lib/apt/lists/*
+
 # Set environment variables
 ENV PIP_NO_CACHE_DIR=yes \
     PYTHONUNBUFFERED=1 \
