fix: unbreak cloudbuild steps

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -4,20 +4,21 @@ steps:
     name: "gcr.io/kaniko-project/executor:latest"
     waitFor: ["-"]
     args:
-      - |
-        --dockerfile=Dockerfile.gcloud \
-        --context=. \
-        --cache=true \
-        --cache-ttl=168h \
-        --destination=eu.gcr.io/$PROJECT_ID/crypto-gpt:latest
+      - --dockerfile=Dockerfile.gcloud
+      - --context=.
+      - --cache=true
+      - --cache-ttl=168h
+      - --destination=eu.gcr.io/$PROJECT_ID/crypto-gpt:latest
 
   # Deploy Minio instance to Cloud Run
   - id: "deploy minio service"
     name: "gcr.io/cloud-builders/gcloud"
     waitFor: ["-"]
+    entrypoint: "bash"
     args:
+      - -c
       - | 
-        run deploy minio \
+        gcloud run deploy minio \
         --image bitnami/minio:2023.7.18 \
         --region europe-west1 \
         --platform managed \
@@ -26,8 +27,8 @@ steps:
         --cpu 1 \
         --memory 2Gi \
         --min-instances 1 \
-        --set-env-vars=MINIO_ROOT_USER=crypto-gpt-user \
-        --update-secrets=MINIO_ROOT_PASSWORD=crypto-gpt-minio-password:1
+        --set-env-vars MINIO_ROOT_USER=crypto-gpt-user \
+        --update-secrets MINIO_ROOT_PASSWORD=crypto-gpt-minio-password:1
 
   # Get the Minio instance URL
   - id: 'get service url'
@@ -55,6 +56,6 @@ steps:
         --cpu 1 \
         --memory 2Gi \
         --min-instances 1 \
-        --set-secrets=/app/mnt1/ai-settings.yaml=crypto-gpt-ai-settings:1,/app/mnt2/secrets.env=crypto-gpt-env-secrets:4,MINIO_PASSWORD=crypto-gpt-minio-password:1 \
-        --set-env-vars=MINIO_INSTANCE_URL=$(cat /workspace/minio_url.txt)
+        --set-secrets /app/mnt1/ai-settings.yaml=crypto-gpt-ai-settings:1,/app/mnt2/secrets.env=crypto-gpt-env-secrets:4,MINIO_PASSWORD=crypto-gpt-minio-password:1 \
+        --set-env-vars MINIO_INSTANCE_URL=$(cat /workspace/minio_url.txt)
   
